<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/calendar_icon"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/trip_start_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_date_range_24dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/trip_start_date"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/hint_start_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/trip_end_date"
        app:layout_constraintStart_toEndOf="@id/calendar_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/trip_end_date"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/hint_end_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/trip_save_button"
        app:layout_constraintStart_toEndOf="@id/trip_start_date"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/trip_save_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/trip_delete_button"
        app:layout_constraintStart_toEndOf="@id/trip_end_date"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/trip_delete_button"
        style="@style/DeleteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete_white_24dp"
        android:text="@string/button_save"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/trip_save_button"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>